# video-processing-api

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile_backend  Dockerfile_pubsub  README.md  alembic.ini  manage.py  postman_collection.json  pyproject.toml  requests.txt  requirements.txt
alembic/: env.py
alembic/versions/: 85f38347a14f_12_10_2024.py  8ccc31d871f1_12_10_2024.py  97179acb0d5d_12_10_2024.py  a3f2434395cf_12_10_2024.py  bc0fb89946fd_12_10_2024.py  c6a8c25ddd1d_init.py  e857c2a715ef_12_10_2024.py
compose/base/: Dockerfile  Dockerfile_backend  docker-compose.backend.yml  docker-compose.redis.yml  docker-compose.worker.yml  docker-compose.yml
compose/test/: Dockerfile  docker-compose.yml
compose/with_db/: Dockerfile  docker-compose.yml
locust/: main.py
scripts/: init_instance.sh  remove_pycache.sh
src/: celery_worker.py  main.py  pubsub_cloud.py  pubsub_worker.py  routes.py
src/apps/auth/: controllers.py  schemas.py  utils.py
src/apps/dummy/: controllers.py  tasks.py
src/apps/tasks/: controllers.py  models.py  schemas.py  tasks.py
src/apps/users/: models.py
src/apps/videos/: controllers.py  models.py  schemas.py
src/core/database/: base.py  dependencies.py
src/core/database/mixins/: active.py  id.py
src/core/gcp/cloud_storage/: base.py
src/core/gcp/pubsub/: handlers.py  listener.py  publisher.py  schemas.py
src/core/logger/: base.py
src/settings/: base.py
tests/: conftest.py
tests/apps/auth/: test_login.py  test_singup.py
tests/apps/dummy/: test_health_check.py
